<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="title">Dashboard Uni Basel</string>
    <string name="yes">yes</string>
    <string name="msg_unable_to_start">Unable to start</string>
    <string name="title_install_native_app">Install native app?</string>
    <string name="msg_install_or_use_web">Do you want to install the native app or use the website?</string>
    <string name="menuPreferences">Preferences</string>
    <string name="prefUpdate">Update</string>
    <string name="prefUpdateLong">Update app information</string>
    <string name="prefLastUpdate">Last update</string>
    <string name="prefLastUpdateLong">never</string>
    <string name="prefUpdateFrequency">Update frequency</string>
    <string name="prefUpdateFrequencyLong">How often should the app list be updated fromt the network.</string>
    <string name="prefkeyUpdateNow">Update now</string>
    <string name="prefUpdateNowLong">Get new apps...</string>
    <string-array name="prefUpdateFrequencyEntries">
        <item>Every time</item>
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Never</item>
    </string-array>
    <string-array name="prefUpdateFrequencyValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="msg_updating">Updating...</string>
    <string name="itemLaunchApp">Launch App</string>
    <string name="itemGotoWeb">Goto Webpage</string>
    <string name="itemHide">Toggle hide app</string>
    <string name="itemHideOff">Hide hidden apps</string>
    <string name="itemHideOn">Show hidden apps</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="prefGui">GUI</string>
    <string name="prefAppListStyle">App list sytle</string>
    <string-array name="prefAppListStyleEntries">
        <item>List</item>
        <item>Grid</item>
    </string-array>
    <string-array name="prefAppListStyleValues">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="prefAppAppearanceEntries">
        <item>Unibas turquoise</item>
        <item>android</item>
    </string-array>
    <string-array name="prefAppAppearanceValues">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="prefAppAppearance">App appearance</string>
    <string name="prefAppAppearanceLong">Change to look and feel of the app.</string>
</resources>
